[workspace]
members = ["deforest_derive"]

[package]
name = "deforest"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
description = "efficient `#![no_std]` parser for devicetree blobs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "borrowed_model"
crate-type = ["lib"]
test = true
required-features = ["derive"]

[[example]]
name = "owned_model"
crate-type = ["lib"]
test = true
required-features = ["alloc", "derive"]

[[test]]
name = "test"
required-features = ["alloc"]

[dependencies]
ascii = { version = "1.1.0", default-features = false }
deforest_derive = { path = "deforest_derive", optional = true }
fallible-iterator = { version = "0.3.0", default-features = false }
zerocopy = { version =  "0.7.0", features = ["derive"] }

[features]
alloc = ["fallible-iterator/alloc"]
derive = ["deforest_derive"]
model = []
std = ["alloc", "fallible-iterator/std"]
