[package]
name = "deforest_derive"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "derive macros for the crate deforest"
readme = "../README.md"
repository = "https://github.com/kadiwa4/deforest"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.54"
quote = "1.0.26"
syn = { version = "2.0.12", features = ["full"] }

[features]
